Blender startup (launching) Problem 2.79 64 bit #53259

Closed
opened 2017-11-06 07:32:55 +01:00 by atek · 27 comments

Why there is Startup Problem 2.79. Im getting problem with 2.79 new version i have downloaded. The installation done successfully. When i click on the exe the cmd run and disappears and nothing happens. I have installed and uninstall 2-3times. Blender did not launch. Im using 64bit setup but when i tried the 32bit zip its working. So whats the problem why Blender is not getting start with the installation. Any suggestion or help. Thanks

Why there is Startup Problem 2.79. Im getting problem with 2.79 new version i have downloaded. The installation done successfully. When i click on the exe the cmd run and disappears and nothing happens. I have installed and uninstall 2-3times. Blender did not launch. Im using 64bit setup but when i tried the 32bit zip its working. So whats the problem why Blender is not getting start with the installation. Any suggestion or help. Thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @atek

Added subscriber: @atek
atek changed title from Blender startup (launching) Problem to Blender startup (launching) Problem 2.79 64 bit 2017-11-06 07:34:02 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Please note this is not a support system, but a bug tracker. Developers here can only fix bugs which they can reproduce, giving exact clear steps reproducing the error is essential step for getting issue resolved.

  • Never blindly wipe report bug guidelines and pre-existing template, those exists for a reason.
  • Provide operation system you're using, and it's bitness.
  • Make sure you are using latest video drivers.
  • Test whether older versions of Blender are working for you, also test whether portable (.zip) 64bit versions works for you.
  • Open Blender from command line (cmd.exe) and see if there are any errors reported there,
Please note this is not a support system, but a bug tracker. Developers here can only fix bugs which they can reproduce, giving exact clear steps reproducing the error is essential step for getting issue resolved. - Never blindly wipe report bug guidelines and pre-existing template, those exists for a reason. - Provide operation system you're using, and it's bitness. - Make sure you are using latest video drivers. - Test whether older versions of Blender are working for you, also test whether portable (.zip) 64bit versions works for you. - Open Blender from command line (cmd.exe) and see if there are any errors reported there,
Author

Thanks for replying. Im using win7 64bit with update graphic card. Before it was working with 2.79 version. I was installing pip and shapely Archipack 2d Addon. I deleted complete folder and download from website and install. I tried with the 64 bit zip file same result. This is the error im getting. http://pasteall.org/pic/index.php?id=120164. As mention above 2.79 32 bit zip is working good. Hope given information as mention above.

Thanks for replying. Im using win7 64bit with update graphic card. Before it was working with 2.79 version. I was installing pip and shapely Archipack 2d Addon. I deleted complete folder and download from website and install. I tried with the 64 bit zip file same result. This is the error im getting. http://pasteall.org/pic/index.php?id=120164. As mention above 2.79 32 bit zip is working good. Hope given information as mention above.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

try renaming C:\Users[youruser]\AppData\Roaming\Blender Foundation\Blender\2.79 to C:\Users[youruser]\AppData\Roaming\Blender Foundation\Blender\2.79.bak and starting blender.

try renaming C:\Users\[youruser]\AppData\Roaming\Blender Foundation\Blender\2.79 to C:\Users\[youruser]\AppData\Roaming\Blender Foundation\Blender\2.79.bak and starting blender.
Author

with the reference of LazyDodo i have rename the folder 2.79.bak in the app -> roaming -> blender foundation -> 2.79

blender abk.png

And result is same below

http://pasteall.org/pic/index.php?id=120166

with the reference of LazyDodo i have rename the folder 2.79.bak in the app -> roaming -> blender foundation -> 2.79 ![blender abk.png](https://archive.blender.org/developer/F1099088/blender_abk.png) And result is same below http://pasteall.org/pic/index.php?id=120166
Member

These video's aren't really all that helpful , all it shows it blender not starting, and i'm willing to take your word on that, please run blender from the command prompt instead so the window doesn't instantly close when something goes wrong and see if there's any additional diagnostic information printed.

These video's aren't really all that helpful , all it shows it blender not starting, and i'm willing to take your word on that, please run blender from the command prompt instead so the window doesn't instantly close when something goes wrong and see if there's any additional diagnostic information printed.
Author

Can you plz tell me the steps how to run blender from the command prompt.

Can you plz tell me the steps how to run blender from the command prompt.
Author

well i got it how to run blender from command prompt and this is the error
blender cmd error.jpg

well i got it how to run blender from command prompt and this is the error ![blender cmd error.jpg](https://archive.blender.org/developer/F1101104/blender_cmd_error.jpg)
Member

I added some additional diagnostic information, can you retry this test with tomorrows (nov 8) buildbot build from https://builder.blender.org/download/ ?

I added some additional diagnostic information, can you retry this test with tomorrows (nov 8) buildbot build from https://builder.blender.org/download/ ?
Member

It seems you do not have SP1 installed on your windows 7, which might be the cause of your issues, please update.

It seems you do not have SP1 installed on your windows 7, which might be the cause of your issues, please update.
Author

I have format complete PC and install new Windows 7 64bit still the same problem. I have upgrade Graphic card also. I have download todays update (11-11-2017). Same issue cant open 64 bit. Thanks

cmd error.jpg

I have format complete PC and install new Windows 7 64bit still the same problem. I have upgrade Graphic card also. I have download todays update (11-11-2017). Same issue cant open 64 bit. Thanks ![cmd error.jpg](https://archive.blender.org/developer/F1121189/cmd_error.jpg)
Member

You still do not have sp1 installed. Windows version 6.1.7600 is stock windows, that number will be 6.1.7601 if sp1 was applied successfully.

You still do not have sp1 installed. Windows version 6.1.7600 is stock windows, that number will be 6.1.7601 if sp1 was applied successfully.
Author

Can you plz clear what to do know? Do i have to upgrade windows or something else really confuse.

Can you plz clear what to do know? Do i have to upgrade windows or something else really confuse.
Member
https://support.microsoft.com/en-ca/help/15090/windows-7-install-service-pack-1-sp1
Author

Thanks LazyDodo for your suggestion and feedback. I have service pack1 and im much happy with 2.79 64 bit version installed and working fine.

Thanks LazyDodo for your suggestion and feedback. I have service pack1 and im much happy with 2.79 64 bit version installed and working fine.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Ray molenkamp self-assigned this 2017-11-14 17:32:15 +01:00

Added subscriber: @GAURAV547

Added subscriber: @GAURAV547

Just download the new Beta version 2.80 and the problem will go away.

Just download the new Beta version 2.80 and the problem will go away.

Added subscriber: @imowffaq

Added subscriber: @imowffaq

hey this is tobby, i have a problem simulator to this one but blender dosnt work for me at all .
i hade an older version that used to work but when i wanted to go back to that old version it also dosnt work.
i have a 64 bit, widows10 laptop

hey this is tobby, i have a problem simulator to this one but blender dosnt work for me at all . i hade an older version that used to work but when i wanted to go back to that old version it also dosnt work. i have a 64 bit, widows10 laptop

Added subscriber: @hideki.hhs

Added subscriber: @hideki.hhs

I had this problem as well. I had resolved it downloading the .zip file instead of the .msi file. Then I extract the files instead of installing it. It's worked for me. I had downloaded it In : https://builder.blender.org/download/

I had this problem as well. I had resolved it downloading the .zip file instead of the .msi file. Then I extract the files instead of installing it. It's worked for me. I had downloaded it In : https://builder.blender.org/download/

Added subscriber: @bluage2

Added subscriber: @bluage2

I wanted to report my experience.

Have run blender for years going back many years with no issues, but older versions (and nvidia gpu).

Starting to edit/update some older stuff and do some newer stuff. Fresh machine, installed blender 2.83 (recommended download at blender.org). Ran portable on windows 10 x64 (16GB of ram, quad proc, amd radeon r7).

Didn't work, access violation. Disabling gpu didn't work. Frustrating because windows 10 forces updates for most things even when you don't want them, so I haven't had problem for years when updating a driver manually fixes it.

I tried older versions of the portable, got exactly the same error and no good debugs.

Finally went and manually updated the radeon driver in device manager (win+x, device manager -> properties -> update driver). Can't recall last time this actually found a driver and updated it, but here it did. And then running portable worked with no issues.

I do think that enough people are still getting this error in 2020 (this and many of other issues with this error started in 2017)... devs could handle this error better and send people to a wiki that lets us update it with specifics. Since I'm not planning on being a blender dev just yet I'm contributing this comment in hope it helps some others.

Thanks to blender devs for these amazing tools. If more information on system in question would help lmk.

here was the error on 2.79 that was pretty much exactly same as other versions:

C:\Users\someuser\Documents\blender-2.79-windows64>blender -d
Switching to fully guarded memory allocator.
Blender 2.79 (sub 0)
Build: Mon 09/11/2017 07:44 AM Windows
argv[0] = blender
argv[1] = -d
read file
  Version 272 sub 2 date unknown hash unknown

ordered
 OBCube
 OBLamp
 OBCamera
AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 192000hz instead
Error: EXCEPTION_ACCESS_VIOLATION
I wanted to report my experience. Have run blender for years going back many years with no issues, but older versions (and nvidia gpu). Starting to edit/update some older stuff and do some newer stuff. Fresh machine, installed blender 2.83 (recommended download at blender.org). Ran portable on windows 10 x64 (16GB of ram, quad proc, amd radeon r7). Didn't work, access violation. Disabling gpu didn't work. Frustrating because windows 10 forces updates for most things even when you don't want them, so I haven't had problem for years when updating a driver manually fixes it. I tried older versions of the portable, got exactly the same error and no good debugs. Finally went and manually updated the radeon driver in device manager (win+x, device manager -> properties -> update driver). Can't recall last time this actually found a driver and updated it, but here it did. And then running portable worked with no issues. I do think that enough people are still getting this error in 2020 (this and many of other issues with this error started in 2017)... devs could handle this error better and send people to a wiki that lets us update it with specifics. Since I'm not planning on being a blender dev just yet I'm contributing this comment in hope it helps some others. Thanks to blender devs for these amazing tools. If more information on system in question would help lmk. here was the error on 2.79 that was pretty much exactly same as other versions: ``` C:\Users\someuser\Documents\blender-2.79-windows64>blender -d Switching to fully guarded memory allocator. Blender 2.79 (sub 0) Build: Mon 09/11/2017 07:44 AM Windows argv[0] = blender argv[1] = -d read file Version 272 sub 2 date unknown hash unknown ordered OBCube OBLamp OBCamera AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 192000hz instead Error: EXCEPTION_ACCESS_VIOLATION ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53259
No description provided.